// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationSettings componentDidUpdate 1`] = `
Object {
  "email": "",
  "hasModifications": false,
  "isAddingEmail": false,
  "updatedAppContacts": Array [
    Object {
      "email": "bit.bot@bitrise.io",
      "id": "bit-bot",
      "isConfirmed": true,
      "notificationPreferences": Object {
        "failedPublish": true,
        "newVersion": true,
        "successfulPublish": true,
      },
    },
    Object {
      "email": "purr.request@bitrise.io",
      "id": "purr-req",
      "isConfirmed": false,
      "notificationPreferences": Object {
        "failedPublish": true,
        "newVersion": false,
        "successfulPublish": false,
      },
    },
    Object {
      "email": " doesnt@matt.er",
    },
  ],
}
`;

exports[`NotificationSettings onCancel 1`] = `
Array [
  Object {
    "email": "bit.bot@bitrise.io",
    "id": "bit-bot",
    "isConfirmed": true,
    "isMarkedForUpdate": true,
    "notificationPreferences": Object {
      "failedPublish": true,
      "newVersion": true,
      "successfulPublish": false,
    },
  },
  Object {
    "email": "purr.request@bitrise.io",
    "id": "purr-req",
    "isConfirmed": false,
    "notificationPreferences": Object {
      "failedPublish": true,
      "newVersion": false,
      "successfulPublish": false,
    },
  },
]
`;

exports[`NotificationSettings onDeleteContact 1`] = `
Array [
  Object {
    "email": "bit.bot@bitrise.io",
    "id": "bit-bot",
    "isConfirmed": true,
    "isMarkedForDelete": true,
    "isMarkedForUpdate": false,
    "notificationPreferences": Object {
      "failedPublish": true,
      "newVersion": true,
      "successfulPublish": true,
    },
  },
  Object {
    "email": "purr.request@bitrise.io",
    "id": "purr-req",
    "isConfirmed": false,
    "notificationPreferences": Object {
      "failedPublish": true,
      "newVersion": false,
      "successfulPublish": false,
    },
  },
]
`;

exports[`NotificationSettings onNotificationPreferenceChanged 1`] = `
Array [
  Object {
    "email": "bit.bot@bitrise.io",
    "id": "bit-bot",
    "isConfirmed": true,
    "isMarkedForUpdate": true,
    "notificationPreferences": Object {
      "failedPublish": true,
      "newVersion": true,
      "successfulPublish": false,
    },
  },
  Object {
    "email": "purr.request@bitrise.io",
    "id": "purr-req",
    "isConfirmed": false,
    "notificationPreferences": Object {
      "failedPublish": true,
      "newVersion": false,
      "successfulPublish": false,
    },
  },
]
`;

exports[`NotificationSettings renders correctly 1`] = `
<_default
  appContacts={
    Array [
      Object {
        "email": "bit.bot@bitrise.io",
        "id": "bit-bot",
        "isConfirmed": true,
        "notificationPreferences": Object {
          "failedPublish": true,
          "newVersion": true,
          "successfulPublish": true,
        },
      },
      Object {
        "email": "purr.request@bitrise.io",
        "id": "purr-req",
        "isConfirmed": false,
        "notificationPreferences": Object {
          "failedPublish": true,
          "newVersion": false,
          "successfulPublish": false,
        },
      },
    ]
  }
  email=""
  hasLoaded={true}
  isAddingEmail={false}
  onAddEmail={[Function]}
  onCancel={[Function]}
  onDeleteContact={[Function]}
  onEmailChange={[Function]}
  onNotificationPreferenceChanged={[Function]}
/>
`;
